--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "chart.js": "^2.9.4",
+    "intro.js-react": "^0.3.0",
     "materialize": "^1.0.0",
     "materialize-css": "^1.0.0",
     "materialize-stepper": "^3.1.0",
