--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bk-react-charts": "^1.1.2",
     "chart.js": "^2.9.4",
     "intro.js-react": "^0.3.0",
     "materialize": "^1.0.0",
@@ -16,6 +17,7 @@
     "react-chartjs-2": "^2.11.1",
     "react-data-table-component": "^6.11.7",
     "react-dom": "^16.13.1",
+    "react-lazylog": "^4.5.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
